# ggwave

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README-tmpl.md  README.md  README.md.tmpl  manifest
.github/workflows/: build.yml
bindings/: CMakeLists.txt
bindings/javascript/: CMakeLists.txt  README.md  emscripten.cpp  ggwave.js  package-tmpl.json  package.json
bindings/python/: .gitignore  MANIFEST.in  Makefile  README-tmpl.rst  README.md  cggwave.pxd  ggwave.pyx  setup-tmpl.py  setup.py  test.py
bindings/python/debian/: changelog  control  copyright  rules
bindings/python/debian/source/: options
examples/: CMakeLists.txt  ggwave-common-sdl2.cpp  ggwave-common-sdl2.h  ggwave-common.cpp  ggwave-common.h  icons_font_awesome.h
examples/arduino-rx/: .gitignore  CMakeLists.txt  README.md  arduino-rx.cpp  arduino-rx.ino  fritzing-sketch.fzz  ggwave.cpp  index-tmpl.html  resampler.cpp
examples/arduino-rx-web/: CMakeLists.txt  README.md  arduino-rx-web.cpp  index-tmpl.html
examples/arduino-rx/ggwave/: ggwave.h
examples/arduino-tx/: CMakeLists.txt  README.md  arduino-tx.ino  fritzing-sketch.fzz  ggwave.h
examples/arduino-tx-obsolete/: arduino-tx.ino  ggwave.h
examples/arduino-tx2/: CMakeLists.txt  arduino-tx2.ino
examples/buttons/: CMakeLists.txt  README.md  index-tmpl.html
examples/esp32-rx/: CMakeLists.txt  README.md  esp32-rx.ino  fritzing-sketch.fzz
examples/esp8266-rx/: README.md  esp8266-rx.ino
examples/ggwave-cli/: CMakeLists.txt  README.md  main.cpp
examples/ggwave-from-file/: CMakeLists.txt  README.md  main.cpp
examples/ggwave-gui/: CMakeLists.txt  README.md  common.cpp  common.h  interface-unix.cpp  interface.cpp  interface.h  main.cpp
examples/ggwave-js/: CMakeLists.txt  README.md  index-tmpl.html
examples/ggwave-mod/include/ggwave/: ggwave.h
examples/ggwave-mod/src/: CMakeLists.txt  ggwave-mod.js  ggwave.cpp
examples/ggwave-mod/src/reed-solomon/: poly.hpp
examples/ggwave-py/: README.md  receive.py  send.py
examples/ggwave-rx/: CMakeLists.txt  main.cpp
examples/ggwave-to-file/: CMakeLists.txt  README.md  ggwave-to-file-local.py  ggwave-to-file.php  ggwave-to-file.py  main.cpp
examples/ggwave-wasm/: CMakeLists.txt  index-tmpl.html  main.cpp  main.js
examples/goertzel/: CMakeLists.txt  main.cpp
examples/pfd/: pfd.h
examples/r2t2/: CMakeLists.txt  README.md  index-tmpl.html  main.cpp  main.js  r2t2-rx.cpp  style.css
examples/r2t2/arduino-tx/: arduino-tx.ino  ggwave.h
examples/r2t2/ggwave-mod/include/ggwave/: ggwave.h
examples/r2t2/ggwave-mod/src/: ggwave.cpp
examples/rp2040-rx/: CMakeLists.txt  README.md  fritzing-sketch.fzz  mic-analog.cpp  mic-analog.h  rp2040-rx.ino
examples/simple-rx/: CMakeLists.txt
examples/spectrogram/: CMakeLists.txt  README.md  fft.h  index-tmpl.html  main.cpp  style.css
examples/waver/: CMakeLists.txt  README.md  build_timestamp.h.tmpl  common.cpp  common.h  index-tmpl.html  interface-emscripten.cpp  interface-unix.cpp  main.cpp  style.css
include/ggwave/: ggwave.h
snap/: snapcraft.yaml
src/: CMakeLists.txt  fft.h  ggwave.cpp  resampler.cpp  resampler.h
src/reed-solomon/: gf.hpp  rs.hpp
tests/: CMakeLists.txt  test-ggwave.c  test-ggwave.cpp  test-ggwave.js  test-ggwave.py
